# disneycharacters_pkg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/disneycharacters_pkg/: __init__.py
tests/: test_disneycharacters_pkg.py
