[tool.poetry]
name = "disneycharacters_pkg"
version = "0.1.0"
description = "A Python wrapper for the Disney Characters API"
authors = ["Beth Choi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
